[package]
name = "pulsar_web"
description = "fast and reliable web framework"
license = "Unlicense"
license-file = "LICENSE"
version = "0.1.2"
edition = "2021"
exclude = ["src/main.rs"]

[dependencies]
async-std = "1.13.0"
chrono = "0.4.38"
coloredpp = "0.3.0"
uuid = { version = "1.11.0", features = ["v4"] }
